--- a/about.html
+++ b/about.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
     <title>Al-Sharq Cleaning Co. Kuwait</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="Al-Sharq Co., A cleaning agency based in Kuwait" name="description">
+    <meta content="Cleaning, Carpet Cleaning, Sofa Cleaning, Home Cleaning, Office Cleaning, Kuwait, Al-Sharq"
+        name="keywords">
+    <meta
+        content="Al-Sharq Co., A Kuwait based professional cleaning service for homes and offices with 32+ years of experience."
+        name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -18,7 +21,7 @@
         rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
@@ -45,6 +48,21 @@
 
 
     <!-- Topbar Start -->
+    <div id="mobile-topbar" class="d-flex d-lg-none mobile-topbar px-4"
+        style="display: flex; justify-content: space-between; align-items: center;">
+        <i id="mobile-topbar-toggler" onclick="closeTopBar()" style="font-size: x-large;"
+            class="py-2 fa-regular fa-circle-xmark"></i>
+
+        <div style="display: flex; flex-direction: row; align-items: center; column-gap: 10px;">
+            <div>
+                <small>
+                    <i class="fa fa-phone-alt text-primary me-1"></i>
+                    <a href="tel:+965 9989 1549">+965 9989 1549</a>
+                </small>
+            </div>
+            <a href="/contact.html" class="btn btn-primary">Get A Quote <i class="fa fa-arrow-right ms-1"></i></a>
+        </div>
+    </div>
     <div class="container-fluid bg-light p-0">
         <div class="row gx-0 d-none d-lg-flex">
             <div class="col-lg-7 px-5 text-start">
@@ -54,7 +72,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <small class="far fa-clock text-primary me-2"></small>
-                    <small>Sat - Thu : 08.00 AM - 10.00 PM</small>
+                    <small>Sat - Thu : 08:00 AM - 10:00 PM</small>
                 </div>
             </div>
             <div class="col-lg-5 px-5 text-end">
@@ -402,8 +420,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Al-Jleeb Shuyoukh, Kuwait</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a></p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
+                    </p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>support@alsharq.co</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -415,7 +434,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Opening Hours</h4>
                     <h6 class="text-light">Saturday - Thursday:</h6>
-                    <p class="mb-4">08.00 AM - 10.00 PM</p>
+                    <p class="mb-4">08:00 AM - 10:00 PM</p>
                     <!-- <h6 class="text-light">Saturday - Sunday:</h6>
                     <p class="mb-0">09.00 AM - 12.00 PM</p> -->
                 </div>
