--- a/service.html
+++ b/service.html
@@ -53,7 +53,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Jleeb-Al Shuyoukh, Kuwait</small>
+                    <small>Kuwait</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center py-3">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -63,17 +63,14 @@
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center py-3 me-4">
                     <small class="fa fa-phone-alt text-secondary me-2"></small>
-                    <a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a>
+                    <a class="text-secondary" href="tel:+965 9777 3983">+965 9777 3983</a>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
-                    <a aria-label="Facebook page" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a aria-label="Twitter account" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
-                            class="fab fa-twitter"></i></a>
-                    <a aria-label="Linkedin profile" class="btn btn-sm-square bg-white text-primary me-1" href=""><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a aria-label="Instagram profile" class="btn btn-sm-square bg-white text-primary me-0" href=""><i
-                            class="fab fa-instagram"></i></a>
+                    <a aria-label="Whatsapp account" class="btn btn-sm-square bg-white text-primary me-1"
+                        href="https://wa.me/+96597773983"><i class="fa-brands fa-whatsapp"></i></a>
+
+                    <a aria-label="Instagram page" class="btn btn-sm-square bg-white text-primary me-0"
+                        href="https://www.instagram.com/altawasolclean_"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -85,7 +82,7 @@
             <div class="flex flex-col pt-10px">
                 <div class="">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Jleeb-Al Shuyoukh, Kuwait</small>
+                    <small>Kuwait</small>
                 </div>
                 <div class="">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -93,7 +90,7 @@
                 </div>
                 <div class="">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small><a class="text-secondary" href="tel:+965 9989 1549">+965 9989 1549</a></small>
+                    <small><a class="text-secondary" href="tel:+965 9777 3983">+965 9777 3983</a></small>
                 </div>
             </div>
             <!-- toggler and quote -->
@@ -401,20 +398,16 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jleeb-Al Shuyoukh, Kuwait</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9989 1549">+965 9989 1549</a>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Kuwait</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+965 9777 3983">+965 9777 3983</a>
                     </p>
-                    <a href="mailto:support@altawasol.co" class="text-white mb-2"><i
-                            class="fa fa-envelope me-3"></i>support@altawasol.co</a>
+                    <a href="mailto:support@altawasolclean.com" class="text-white mb-2"><i
+                            class="fa fa-envelope me-3"></i>support@altawasolclean.com</a>
                     <div class="d-flex pt-2">
-                        <a aria-label="Twitter account" class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-twitter"></i></a>
-                        <a aria-label="Facebook page" class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a aria-label="Youtube channel" class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-youtube"></i></a>
-                        <a aria-label="Linkedin profile" class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-linkedin-in"></i></a>
+                        <a target="_blank" aria-label="Whatsapp account" class="btn btn-outline-light btn-social"
+                            href="https://wa.me/+96597773983"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a target="_blank" aria-label="Instagram page" class="btn btn-outline-light btn-social"
+                            href="https://www.instagram.com/altawasolclean_"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -449,7 +442,7 @@
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                         &copy; <a class="border-bottom" href="#">Al-Tawasol Co.</a> All Right Reserved.
 
-                        Designed By <a class="border-bottom" href="https://github.com/sarwar76200">sarwar76200</a>
+                        Maintained by <a class="border-bottom" href="https://github.com/sarwar76200">sarwar76200</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
